<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoeGewoon</string>
    <string name="action_settings">Settings</string>
    <string name="task_title_hint">Add a task</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="task_label_title">Title</string>
    <string name="details_label">Details</string>
    <string name="task_completed_label">Completed</string>
    <string name="task_detail_hint">Enter Details here</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="task_title">Tasks</string>
    <string name="new_task">Add Task</string>
    <string name="text_view">Click button to enter task</string>
    <string name="add_task_button">Add</string>
    <string name="add_task">Add Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="send_task">Send Task</string>
    <string name="task_report_subject">Task Message</string>
    <string name="send_report">Send task message via</string>
    <string name="task_report_completed">The task is completed</string>
    <string name="task_report_not_completed">The task is not completed</string>
    <string name="task_report">Task: %1$s. This task was made on %2$s. %3$s. The tasks details: %4$s.</string>
    <string name="see_stats">Statistics</string>
    <string name="see_completed">Completed Tasks</string>
    <string name="title_activity_task_stats">TaskStatsActivity</string>
    <string name="task_label_stats">STATS</string>
    <string name="title_activity_task_completed">Completed</string>

</resources>
